Add delete button to items

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -26,6 +26,7 @@
   },
   "list": {
     "title": "Movies",
-    "empty": "No movies in the catalog yet."
+    "empty": "No movies in the catalog yet.",
+    "deleteButton": "Delete"
   }
 }
