Add description to movies

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,10 +8,12 @@
     "labels": {
       "movieTitle": "Title:",
       "rating": "Rating (0-10):",
-      "category": "Category:"
+      "category": "Category:",
+      "description": "Description:"
     },
     "placeholders": {
-      "movieTitle": "Enter the movie title..."
+      "movieTitle": "Enter the movie title...",
+      "description": "Enter the movie description..."
     },
     "options": {
       "selectCategory": "-- Select a category --",
