Add category filter

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -17,6 +17,7 @@
     },
     "options": {
       "selectCategory": "-- Select a category --",
+      "no_filter": "All",
       "action": "Action",
       "drama": "Drama",
       "comedy": "Comedy",
